cahnged expo.html for mobile

--- a/expo.html
+++ b/expo.html
@@ -1,8 +1,8 @@
 <html>
 <script>
 if(screen.width<=480){
-document.write("This site can be viewed by means of your PC !");
-document.write("<h1>This site can be viewed by means of your PC !</h1><img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_Vtpfv3DPYtXvy5dq7X2g181r8CTIW8sYJrj49oA2y4gnWgXttA\"/>");
+
+document.write("<body bgcolor=\"#000000\"><marquee behavior=\"slide\"><font color=\"white\"><h1>This site can be viewed by means of your PC !</h1></marquee><center><img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDpZ8RajF6SMCZe4PZ1PN8AL8hm7My15ssKqTggRNdmHUSRKZ6\"/></center></font></body>");
 }
 else{
 
