updated arrow b.html

--- a/b.html
+++ b/b.html
@@ -91,10 +91,16 @@ a:link {
   text-decoration: none;
   color:white;
 }
-@keyframes ani{
-from{transform:skew(10deg,0deg);}
-to{transform:skew(0deg,0deg);}
+.fp-next{
+
 }
+.fp-controlArrow{
+ box-shadow: -20px 20px 40px black;
+}
+.fp-controlArrow:hover{
+ box-shadow: -20px 10px 20px black;
+}
+
 </style>
 </head>
 <body>
